Fixed Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,6 @@ footer .social-icons a {
 .social-icons a {
   width: 40px;
   height: 40px;
-  display: block;
   margin-right: 10px;
   background-position: center center;
   background-repeat: no-repeat;
